# demo-hr-mcp-hack

./: README.md  build-and-push.ps1  hr_data.py  pyproject.toml  server.py
infra/: container-app.bicep  container-app.bicepparam
