[project]
name = "hr-mcp-server"
version = "0.1.0"
description = "HR MCP Server with scope-based authorization using FastMCP"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "azure-monitor-opentelemetry",
    "opentelemetry-api",
    "opentelemetry-sdk",
]

[tool.setuptools]
py-modules = ["server", "hr_data"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
